config/istio.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-grpc
  namespace: default
spec:
  selector:
    app: hello-grpc
  type: LoadBalancer
  ports:
    - name: grpc-web-hello-grpc
      port: 12345

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-grpc
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-gateway
  http:
    - route:
        - destination:
            host: hello-grpc
            port:
              number: 12345
      match:
        - uri:
            prefix: /main
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: meera-tech-manual
      hosts:
        - "*"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gateway-grpc-web-filter
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.cors"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.grpc_web
